force-app/main/default/objects/Discovery_HNS__c/Discovery_HNS__c.object-meta.xml
<CustomObject>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  For Team HER reflections app.  Will hold all resources apprentices use for Apprentice Work</description>
    <label>Discovery HNS</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Discovery HNS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovery HNS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>