force-app/main/default/objects/Discovery_HNS__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Discovery HNS</relationshipLabel>
    <relationshipName>Discovery_HNS</relationshipName>
    <type>Lookup</type>
</CustomField>