force-app/main/default/objects/Discovery_HNS__c/fields/Link_HS__c.field-meta.xml
<CustomField>
    <fullName>Link_HS__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  Will give link, if applicable for the URL of the discovery</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If Applicable.  Also, https:// must be used if you copy and paste URL here.</inlineHelpText>
    <label>Link HS</label>
    <type>Url</type>
</CustomField>