force-app/main/default/objects/Discovery_HNS__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Any notes or screenshots for the discovery object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>