force-app/main/default/objects/Discovery_HNS__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Discovery HNS</relationshipLabel>
    <relationshipName>Discovery_HNS</relationshipName>
    <type>Lookup</type>
</CustomField>