force-app/main/default/objects/Discovery_HNS__c/fields/Type_HS__c.field-meta.xml
<CustomField>
    <fullName>Type_HS__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will allow a user to select the type of discovery they have</description>
    <label>Type HS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>